# SMGP

./: .gitignore  README.md
assignment1/: CMakeLists.txt  README.md
assignment1/src/: main.cpp
assignment2/: CMakeLists.txt  README.md
assignment2/results/: bunny-1000.off  bunny-500.off  cat.off  horse.off  luigi.off  sphere.off
assignment2/src/: main.cpp
assignment3/: CMakeLists.txt  README.md
assignment3/src/: main.cpp
assignment4/: CMakeLists.txt  README.md
assignment4/src/: main.cpp
assignment5/: CMakeLists.txt  README.md
assignment5/src/: main.cpp
gp21-project/: .gitignore  CMakeLists.txt  README.md
gp21-project/ModelPytorch/: FaceMorphing.ipynb  dataset.py  model.py  train.py
gp21-project/ModelPytorch/ckt/: decoder_44faces.pth  decoder_44faces_lr5e-4.pth  encoder_44faces.pth  encoder_44faces_lr5e-4.pth
gp21-project/ModelPytorch/recon_meshes/: V1.txt  V2.txt  V3.txt  V4.txt
gp21-project/libigl/cmake/: LibiglDownloadExternal.cmake
gp21-project/libigl/include/igl/opengl/glfw/imgui/: ImGuiHelpers.h  ImGuiMenu.cpp
gp21-project/libigl/tutorial/106_ViewerMenu/: main.cpp
gp21-project/src/: 3D_keypoints.cpp  3D_keypoints.hpp  PCA.cpp  PCA.hpp  callbacks.cpp  callbacks.hpp  globals.cpp  globals.hpp  main.cpp  non-rigid-alignment.cpp  non-rigid-alignment.hpp  rigid_alignment.cpp  rigid_alignment.hpp  spatialindex.cpp  spatialindex.hpp  utils.cpp  utils.hpp
libigl/cmake/: LibiglDownloadExternal.cmake
libigl/include/igl/opengl/glfw/imgui/: ImGuiHelpers.h
libigl/tutorial/: CMakeLists.txt
